테스트용 액션바 컬러링 삭제 액션바 사이즈 키움
아래 키워드로 검색 시 해당 기능 변경 가능
시간 흐름 경고 제한 시간
블루투스 모듈 이름
STOP 시 타이머 리셋

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Cantus</string>
-    <string name="bluetooth">CONNECT</string>
+    <string name="bluetooth">DISCONNECTED</string>
     <string name="setting">SETTING</string>
     <string name="back">BACK</string>
 
